Minor website tweaks

--- a/web/index.html
+++ b/web/index.html
@@ -81,11 +81,11 @@
     them will slow your browser down or cause conflicts. Remember to check your
     UserScripts as well, if you have any.</p>
 
-  <h3>Chrome &amp; Opera 15+</h3>
+  <h3>Chrome, Opera 15+, &amp; Vivaldi</h3>
   <img src="chrome-logo.png" alt="">
   <p>BetterPonymotes is available on the
     <a href="https://chrome.google.com/webstore/detail/betterponymotes/bkkmhlceghomaajdimmejkhldnpleoea">Chrome Webstore</a>.
-    Or, just click: <button onclick="chrome.webstore.install()">Install</button></p>
+  <p>Chrome users can click this button: <button class="btn" onclick="chrome.webstore.install()">Install</button></p>
   <div class="clear"></div>
 
   <h3>Firefox &amp; Firefox Mobile</h3>
@@ -111,14 +111,14 @@
   <div class="clear"></div>
 
   <h3>Other Platforms</h3>
-  <p>No support for other browsers, other Android reddit applications, or iOS
+  <p>Chrome derivatives can usually install from the Chrome Webstore. No
+    support for other browsers, other Android reddit applications, or iOS
     devices is currently available.</p>
   <div class="clear"></div>
 
   <h3>Updates</h3>
   <p>BetterPonymotes is periodically updated with the latest emotes and
-    features. Your browser will download these automatically and does not need
-    to be restarted.</p>
+    features. Your browser will download these automatically.</p>
 
   <h3>Feedback</h3>
   <p>Bug reports, feature requests, questions, general feedback or anything
