--- a/web/index.html
+++ b/web/index.html
@@ -232,6 +232,7 @@
     <li><a href="https://www.reddit.com/r/mylittlewarhammer">r/mylittlewarhammer</a>
     <li><a href="https://www.reddit.com/r/mylittlewelcomewagon">r/mylittlewelcomewagon</a>
     <li><a href="https://www.reddit.com/r/mylittlewtf">r/mylittlewtf</a>
+    <li><a href="https://www.reddit.com/r/nightglider">r/nightglider</a>
     <li><a href="https://www.reddit.com/r/onetrueprincess">r/onetrueprincess</a>
     <li><a href="https://www.reddit.com/r/pankakke">r/pankakke</a>
     <li><a href="https://www.reddit.com/r/partyfavor">r/partyfavor</a>
