Opera: Add link to home page for extension to install from Chrome Webstore

--- a/web/index.html
+++ b/web/index.html
@@ -86,6 +86,7 @@
   <p>BetterPonymotes is available on the
     <a href="https://chrome.google.com/webstore/detail/betterponymotes/bkkmhlceghomaajdimmejkhldnpleoea">Chrome Webstore</a>.
   <p>Chrome users can click this button: <button class="btn" onclick="chrome.webstore.install()">Install</button></p>
+  <p>Opera users may need <a href="https://addons.opera.com/en/extensions/details/download-chrome-extension-9/">this extension</a> first.
   <div class="clear"></div>
 
   <h3>Firefox &amp; Firefox Mobile</h3>
