--- a/web/index.html
+++ b/web/index.html
@@ -167,6 +167,7 @@
     <li><a href="https://www.reddit.com/r/desktopponies">r/desktopponies</a>
     <li><a href="https://www.reddit.com/r/equestriagirls">r/equestriagirls</a>
     <li><a href="https://www.reddit.com/r/falloutequestria">r/falloutequestria</a>
+    <li><a href="https://www.reddit.com/r/flashsentry">r/flashsentry</a>
     <li><a href="https://www.reddit.com/r/flitter">r/flitter</a>
     <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
     <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
