--- a/web/index.html
+++ b/web/index.html
@@ -145,6 +145,7 @@
     <li><a href="https://www.reddit.com/r/applejack">r/applejack</a>
     <li><a href="https://www.reddit.com/r/arborus">r/arborus</a>
     <li><a href="https://www.reddit.com/r/ariablaze">r/ariablaze</a>
+    <li><a href="https://www.reddit.com/r/arity">r/arity</a>
     <li><a href="https://www.reddit.com/r/babsquisition">r/babsquisition</a>
     <li><a href="https://www.reddit.com/r/batquisition">r/batquisition</a>
     <li><a href="https://www.reddit.com/r/beautybrass">r/beautybrass</a>
