Add /r/coloratura, /r/flimflambrothers

--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
     <li><a href="https://www.reddit.com/r/clopmotes">r/clopmotes</a>
     <li><a href="https://www.reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
     <li><a href="https://www.reddit.com/r/colgateinquisition">r/colgateinquisition</a>
+    <li><a href="https://www.reddit.com/r/coloratura">r/coloratura</a>
     <li><a href="https://www.reddit.com/r/comicsquisition">r/comicsquisition</a>
     <li><a href="https://www.reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="https://www.reddit.com/r/daylightemotes">r/daylightemotes</a>
@@ -169,6 +170,7 @@
     <li><a href="https://www.reddit.com/r/equestriagirls">r/equestriagirls</a>
     <li><a href="https://www.reddit.com/r/falloutequestria">r/falloutequestria</a>
     <li><a href="https://www.reddit.com/r/flashsentry">r/flashsentry</a>
+    <li><a href="https://www.reddit.com/r/flimflambrothers">r/flimflambrothers</a>
     <li><a href="https://www.reddit.com/r/flitter">r/flitter</a>
     <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
     <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
