--- a/web/index.html
+++ b/web/index.html
@@ -126,6 +126,13 @@
     else should be directed to <a href="https://www.reddit.com/r/betterponymotes">the
     subreddit</a>.</p>
 
+  <h3>Contributing</h3>
+  <p>BetterPonymotes is free and open source software distributed under the
+    <a href="http://www.gnu.org/licenses/agpl.html">GNU Affero General Public
+    License</a>. The source code is
+    <a href="https://github.com/Rothera/bpm">available on GitHub</a>; pull
+    requests are welcome!</p>
+
   <h3>Supported Subreddits</h3>
   <p>BetterPonymotes gets its emotes from the following subreddits. If yours
     isn't on this list, and you'd like it to be, make a request on
