Use HTTPS link to gnu.org

--- a/web/index.html
+++ b/web/index.html
@@ -128,7 +128,7 @@
 
   <h3>Contributing</h3>
   <p>BetterPonymotes is free and open source software distributed under the
-    <a href="http://www.gnu.org/licenses/agpl.html">GNU Affero General Public
+    <a href="https://www.gnu.org/licenses/agpl.html">GNU Affero General Public
     License</a>. The source code is
     <a href="https://github.com/Rothera/bpm">available on GitHub</a>; pull
     requests are welcome!</p>
