Minor tone tweak on site homepage

--- a/web/index.html
+++ b/web/index.html
@@ -131,7 +131,7 @@
     <a href="https://www.gnu.org/licenses/agpl.html">GNU Affero General Public
     License</a>. The source code is
     <a href="https://github.com/Rothera/bpm">available on GitHub</a>; pull
-    requests are welcome!</p>
+    requests are welcome.</p>
 
   <h3>Supported Subreddits</h3>
   <p>BetterPonymotes gets its emotes from the following subreddits. If yours
