--- a/addon/dc-settings.html
+++ b/addon/dc-settings.html
@@ -26,7 +26,7 @@
                         <input type="checkbox" data-bpmOption="enableExtraCSS">
                         <span></span>
                     </div>
-                    <span>Enable extra CSS</span>
+                    <span>Enable extra emote modifiers (multi-dimensional spin, etc.)</span>
                 </div>
             </li>
         </ul>
