--- a/addon/dc-settings.html
+++ b/addon/dc-settings.html
@@ -8,7 +8,7 @@
                         <input type="checkbox" data-bpmOption="enableGlobalEmotes">
                         <span></span>
                     </div>
-                    <span>Enable BPM</span>
+                    <span>Enable BPM (requires restart)</span>
                 </div>
             </li>
             <li>
