Major file restructure, settings overhaul

--- a/addon/discord/emote-settings.html
+++ b/addon/discord/emote-settings.html
@@ -1,4 +1,17 @@
 <div class="control-group">
-    <span>Coming Soon!</span>
+    <label>Disabled Emotes</label>
+    <div class="bpm-emote-list" id="bpm-option-blacklisted-emotes">
+    </div>
+    <button id="bpm-clear-blacklist-button">Clear</button>
+    <label>Disable an emote</label>
+    <input type="text" id="bpm-emote-blacklist-input">
+</div>
+<div class="control-group">
+    <label>Whitelisted Emotes</label>
+    <div class="bpm-emote-list" id="bpm-option-whitelisted-emotes">
+    </div>
+    <button id="bpm-clear-whitelist-button">Clear</button>
+    <label>Whitelist an emote</label>
+    <input type="text" id="bpm-emote-whitelist-input">
 </div>
 
