--- a/addon/discord/emote-settings.html
+++ b/addon/discord/emote-settings.html
@@ -1,17 +1,18 @@
 <div class="control-group">
+    <span style="display: block; margin-bottom: 10px;">Requires restart, does not check if emote exists</span>
     <label>Disabled Emotes</label>
-    <div class="bpm-emote-list" id="bpm-option-blacklisted-emotes">
+    <div class="bpm-emote-list" class="bpm-emote-list" id="bpm-option-blacklisted-emotes">
     </div>
     <button id="bpm-clear-blacklist-button">Clear</button>
     <label>Disable an emote</label>
-    <input type="text" id="bpm-emote-blacklist-input">
+    <input type="text" class="bpm-emote-input" id="bpm-emote-blacklist-input">
 </div>
 <div class="control-group">
-    <label>Whitelisted Emotes</label>
+    <label>Whitelisted Emotes (overrides blacklist, disabled subreddits)</label>
     <div class="bpm-emote-list" id="bpm-option-whitelisted-emotes">
     </div>
     <button id="bpm-clear-whitelist-button">Clear</button>
     <label>Whitelist an emote</label>
-    <input type="text" id="bpm-emote-whitelist-input">
+    <input type="text" class="bpm-emote-input" id="bpm-emote-whitelist-input">
 </div>
 
