Subreddit settings now function

--- a/addon/discord/emote-settings.html
+++ b/addon/discord/emote-settings.html
@@ -1,6 +1,5 @@
 <div class="control-group">
-    <span style="display: block; margin-bottom: 10px;">Requires restart, does not check if emote exists</span>
-    <label>Disabled Emotes</label>
+    <label>Disabled Emotes - Requires Restart</label>
     <div class="bpm-emote-list" class="bpm-emote-list" id="bpm-option-blacklisted-emotes">
     </div>
     <button id="bpm-clear-blacklist-button">Clear</button>
@@ -8,7 +7,7 @@
     <input type="text" class="bpm-emote-input" id="bpm-emote-blacklist-input">
 </div>
 <div class="control-group">
-    <label>Whitelisted Emotes (overrides blacklist, disabled subreddits)</label>
+    <label>Whitelisted Emotes - Requires Restart (override disabled subreddits, blacklist)</label>
     <div class="bpm-emote-list" id="bpm-option-whitelisted-emotes">
     </div>
     <button id="bpm-clear-whitelist-button">Clear</button>
