--- a/addon/discord/subreddit-settings.html
+++ b/addon/discord/subreddit-settings.html
@@ -1,4 +1,6 @@
 <div class="control-group">
-    <span>Coming Soon!</span>
+    <label>Enabled Subreddits - Requires Restart</label>
+    <ul class="checkbox-group" id="bpm-subreddit-list">
+    </ul>
 </div>
 
