Adds about page, update checking

--- a/addon/discord/search-settings.html
+++ b/addon/discord/search-settings.html
@@ -1,4 +1,18 @@
 <div class="control-group">
+    <label>Emote Search<label>
+    <ul class="checkbox-group">
+        <li>
+            <div class="checkbox">
+                <div class="checkbox-inner">
+                    <input type="checkbox" data-bpmOption="enableGlobalEmoteSearch">
+                    <span></span>
+                </div>
+                <span>Enable emote search</span>
+            </div>
+        </li>
+    </ul>
+    <label>Search result limit</label>
+    <input type="number" id="bpm-search-result-limit-input">
     <span>Coming Soon!</span>
 </div>
 
