--- a/addon/discord/settings-wrapper.html
+++ b/addon/discord/settings-wrapper.html
@@ -4,6 +4,8 @@
         <div class="tab-bar-item" data-bpmSubpanelMessage="insert_emote_settings">Emotes</div>
         <div class="tab-bar-item" data-bpmSubpanelMessage="insert_subreddit_settings">Subreddits</div>
         <div class="tab-bar-item" data-bpmSubpanelMessage="insert_search_settings">Search</div>
+        <div class="tab-bar-item" data-bpmSubpanelMessage="insert_updates">Updates</div>
+        <div class="tab-bar-item" data-bpmSubpanelMessage="insert_about">About</div>
     </div>
     <div id="bpm-options-inject-target"></div>
 </div>
