Several settings pane updates

--- a/addon/discord/updates.html
+++ b/addon/discord/updates.html
@@ -1,5 +1,7 @@
 <div class="control-group bpm-label-container">
     <label>Check for Updates</label>
-    <span class="bpm-info-span">Releases: https://github.com/ByzantineFailure/bpm/releases/</span>
+    <!-- Without target="_blank" we open in discord's window.  Bad -->
+    <a target="_blank" href="https://github.com/ByzantineFailure/bpm/releases/" 
+        style="margin-bottom: 10px; display: block;">Update Site</a>
     <button id="bpm-check-for-updates-button">Check for updates</button>
 </div>
