--- a/addon/discord/search-settings.html
+++ b/addon/discord/search-settings.html
@@ -1,4 +1,16 @@
 <div class="control-group">
-    <span>Coming Soon!</span>
+    <ul class="checkbox-group">
+        <li>
+            <div class="checkbox">
+                <div class="checkbox-inner">
+                    <input type="checkbox" id="bpm-option-enable-search">
+                    <span></span>
+                </div>
+                <span>Enable emote search (requires restart)</span>
+            </div>
+        </li>
+    </ul>
+    <label>Max search results</label>
+    <input type="number" id="bpm-option-search-limit">
 </div>
 
