--- a/web/index.html
+++ b/web/index.html
@@ -195,6 +195,7 @@
     <li><a href="https://www.reddit.com/r/maudpie">r/maudpie</a>
     <li><a href="https://www.reddit.com/r/minuette">r/minuette</a>
     <li><a href="https://www.reddit.com/r/mlas1animotes">r/mlas1animotes</a>
+    <li><a href="https://www.reddit.com/r/mlpccg">r/mlpccg</a>
     <li><a href="https://www.reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
     <li><a href="https://www.reddit.com/r/mlplounge">r/mlplounge</a>
     <li><a href="https://www.reddit.com/r/mlploungesteamgroup">r/mlploungesteamgroup</a>
