Add r/mylittleantisonic1, r/rosequisition, and r/sunburst

--- a/web/index.html
+++ b/web/index.html
@@ -140,8 +140,8 @@
 
   <ul id="supported-subreddits">
     <li><a href="https://www.reddit.com/r/adagiodazzle">r/adagiodazzle</a>
-    <li><a href="https://www.reddit.com/r/adery">r/adery</a>
     <li><a href="https://www.reddit.com/r/ademotes">r/ademotes</a>
+    <li><a href="https://www.reddit.com/r/adery">r/adery</a>
     <li><a href="https://www.reddit.com/r/adviceponies">r/adviceponies</a>
     <li><a href="https://www.reddit.com/r/afterplounge">r/afterplounge</a>
     <li><a href="https://www.reddit.com/r/ainbowdash">r/ainbowdash</a>
@@ -207,6 +207,7 @@
     <li><a href="https://www.reddit.com/r/mylittlealicorn">r/mylittlealicorn</a>
     <li><a href="https://www.reddit.com/r/mylittleandysonic1">r/mylittleandysonic1</a>
     <li><a href="https://www.reddit.com/r/mylittleanime">r/mylittleanime</a>
+    <li><a href="https://www.reddit.com/r/mylittleantisonic1">r/mylittleantisonic1</a>
     <li><a href="https://www.reddit.com/r/mylittleaprilfools">r/mylittleaprilfools</a>
     <li><a href="https://www.reddit.com/r/mylittlebannertest">r/mylittlebannertest</a>
     <li><a href="https://www.reddit.com/r/mylittlecelestias">r/mylittlecelestias</a>
@@ -261,6 +262,7 @@
     <li><a href="https://www.reddit.com/r/ponymotesextra2">r/ponymotesextra2</a>
     <li><a href="https://www.reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
     <li><a href="https://www.reddit.com/r/roseluck">r/roseluck</a>
+    <li><a href="https://www.reddit.com/r/rosequisition">r/rosequisition</a>
     <li><a href="https://www.reddit.com/r/rubypinch">r/rubypinch</a>
     <li><a href="https://www.reddit.com/r/sapphirestone">r/sapphirestone</a>
     <li><a href="https://www.reddit.com/r/scootalounge">r/scootalounge</a>
@@ -274,6 +276,7 @@
     <li><a href="https://www.reddit.com/r/spitquisition">r/spitquisition</a>
     <li><a href="https://www.reddit.com/r/starlightglimmer">r/starlightglimmer</a>
     <li><a href="https://www.reddit.com/r/sugarbelle">r/sugarbelle</a>
+    <li><a href="https://www.reddit.com/r/sunburst">r/sunburst</a>
     <li><a href="https://www.reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
     <li><a href="https://www.reddit.com/r/surprise">r/surprise</a>
     <li><a href="https://www.reddit.com/r/sweetie_belle">r/sweetie_belle</a>
@@ -283,8 +286,8 @@
     <li><a href="https://www.reddit.com/r/tbpimagedump">r/tbpimagedump</a>
     <li><a href="https://www.reddit.com/r/tbpimagedump2">r/tbpimagedump2</a>
     <li><a href="https://www.reddit.com/r/thebelletower">r/thebelletower</a>
-    <li><a href="https://www.reddit.com/r/thecane">r/thecane</a>
     <li><a href="https://www.reddit.com/r/thebestpony">r/thebestpony</a>
+    <li><a href="https://www.reddit.com/r/thecane">r/thecane</a>
     <li><a href="https://www.reddit.com/r/themirishponies">r/themirishponies</a>
     <li><a href="https://www.reddit.com/r/thepleasurehub">r/thepleasurehub</a>
     <li><a href="https://www.reddit.com/r/trixquisition">r/trixquisition</a>
