Move /r/mylittleantisonic1 to /r/antisonicmotes

--- a/web/index.html
+++ b/web/index.html
@@ -146,6 +146,7 @@
     <li><a href="https://www.reddit.com/r/afterplounge">r/afterplounge</a>
     <li><a href="https://www.reddit.com/r/ainbowdash">r/ainbowdash</a>
     <li><a href="https://www.reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
+    <li><a href="https://www.reddit.com/r/antisonicmotes">r/antisonicmotes</a>
     <li><a href="https://www.reddit.com/r/applebloom">r/applebloom</a>
     <li><a href="https://www.reddit.com/r/appledashquisition">r/appledashquisition</a>
     <li><a href="https://www.reddit.com/r/applefritter">r/applefritter</a>
@@ -207,7 +208,6 @@
     <li><a href="https://www.reddit.com/r/mylittlealicorn">r/mylittlealicorn</a>
     <li><a href="https://www.reddit.com/r/mylittleandysonic1">r/mylittleandysonic1</a>
     <li><a href="https://www.reddit.com/r/mylittleanime">r/mylittleanime</a>
-    <li><a href="https://www.reddit.com/r/mylittleantisonic1">r/mylittleantisonic1</a>
     <li><a href="https://www.reddit.com/r/mylittleaprilfools">r/mylittleaprilfools</a>
     <li><a href="https://www.reddit.com/r/mylittlebannertest">r/mylittlebannertest</a>
     <li><a href="https://www.reddit.com/r/mylittlecelestias">r/mylittlecelestias</a>
