Add r/flurryheart, r/mylittlegaming, r/ponk, and r/shymotes

--- a/web/index.html
+++ b/web/index.html
@@ -181,6 +181,7 @@
     <li><a href="https://www.reddit.com/r/flimflambrothers">r/flimflambrothers</a>
     <li><a href="https://www.reddit.com/r/flitter">r/flitter</a>
     <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
+    <li><a href="https://www.reddit.com/r/flurryheart">r/flurryheart</a>
     <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
     <li><a href="https://www.reddit.com/r/flutterlounge">r/flutterlounge</a>
     <li><a href="https://www.reddit.com/r/freepizzaspizzashop">r/freepizzaspizzashop</a>
@@ -221,6 +222,7 @@
     <li><a href="https://www.reddit.com/r/mylittlefoodmanes">r/mylittlefoodmanes</a>
     <li><a href="https://www.reddit.com/r/mylittlefortress">r/mylittlefortress</a>
     <li><a href="https://www.reddit.com/r/mylittlefriends">r/mylittlefriends</a>
+    <li><a href="https://www.reddit.com/r/mylittlegaming">r/mylittlegaming</a>
     <li><a href="https://www.reddit.com/r/mylittleicons">r/mylittleicons</a>
     <li><a href="https://www.reddit.com/r/mylittlekindle">r/mylittlekindle</a>
     <li><a href="https://www.reddit.com/r/mylittlekitchen">r/mylittlekitchen</a>
@@ -254,6 +256,7 @@
     <li><a href="https://www.reddit.com/r/pinkquisition">r/pinkquisition</a>
     <li><a href="https://www.reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
     <li><a href="https://www.reddit.com/r/ploungemafia">r/ploungemafia</a>
+    <li><a href="https://www.reddit.com/r/ponk">r/ponk</a>
     <li><a href="https://www.reddit.com/r/ponyanarchism">r/ponyanarchism</a>
     <li><a href="https://www.reddit.com/r/ponycountdown">r/ponycountdown</a>
     <li><a href="https://www.reddit.com/r/ponyloungerts">r/ponyloungerts</a>
@@ -269,6 +272,7 @@
     <li><a href="https://www.reddit.com/r/scratchquisition">r/scratchquisition</a>
     <li><a href="https://www.reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="https://www.reddit.com/r/sgap">r/sgap</a>
+    <li><a href="https://www.reddit.com/r/shymotes">r/shymotes</a>
     <li><a href="https://www.reddit.com/r/sombra">r/sombra</a>
     <li><a href="https://www.reddit.com/r/sonatadusk">r/sonatadusk</a>
     <li><a href="https://www.reddit.com/r/spanishmeerkat">r/spanishmeerkat</a>
