Add r/octavia and r/roleplayponies

--- a/web/index.html
+++ b/web/index.html
@@ -249,6 +249,7 @@
     <li><a href="https://www.reddit.com/r/mylittlewelcomewagon">r/mylittlewelcomewagon</a>
     <li><a href="https://www.reddit.com/r/mylittlewtf">r/mylittlewtf</a>
     <li><a href="https://www.reddit.com/r/nightglider">r/nightglider</a>
+    <li><a href="https://www.reddit.com/r/octavia">r/octavia</a>
     <li><a href="https://www.reddit.com/r/onetrueprincess">r/onetrueprincess</a>
     <li><a href="https://www.reddit.com/r/pankakke">r/pankakke</a>
     <li><a href="https://www.reddit.com/r/partyfavor">r/partyfavor</a>
@@ -264,6 +265,7 @@
     <li><a href="https://www.reddit.com/r/ponymotesextra">r/ponymotesextra</a>
     <li><a href="https://www.reddit.com/r/ponymotesextra2">r/ponymotesextra2</a>
     <li><a href="https://www.reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
+    <li><a href="https://www.reddit.com/r/roleplayponies">r/roleplayponies</a>
     <li><a href="https://www.reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="https://www.reddit.com/r/rosequisition">r/rosequisition</a>
     <li><a href="https://www.reddit.com/r/rubypinch">r/rubypinch</a>
