Add r/discord and r/heyitsshugamotes

--- a/web/index.html
+++ b/web/index.html
@@ -175,6 +175,7 @@
     <li><a href="https://www.reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="https://www.reddit.com/r/daylightemotes">r/daylightemotes</a>
     <li><a href="https://www.reddit.com/r/desktopponies">r/desktopponies</a>
+    <li><a href="https://www.reddit.com/r/discord">r/discord</a>
     <li><a href="https://www.reddit.com/r/equestriagirls">r/equestriagirls</a>
     <li><a href="https://www.reddit.com/r/falloutequestria">r/falloutequestria</a>
     <li><a href="https://www.reddit.com/r/flashsentry">r/flashsentry</a>
@@ -188,6 +189,7 @@
     <li><a href="https://www.reddit.com/r/futemotes">r/futemotes</a>
     <li><a href="https://www.reddit.com/r/gallopfrey">r/gallopfrey</a>
     <li><a href="https://www.reddit.com/r/glimmerquisition">r/glimmerquisition</a>
+    <li><a href="https://www.reddit.com/r/heyitsshugamotes">r/heyitsshugamotes</a>
     <li><a href="https://www.reddit.com/r/hugemotes">r/hugemotes</a>
     <li><a href="https://www.reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="https://www.reddit.com/r/ilovedashie">r/ilovedashie</a>
