--- a/web/index.html
+++ b/web/index.html
@@ -201,6 +201,7 @@
     <li><a href="https://www.reddit.com/r/mlas1animotes">r/mlas1animotes</a>
     <li><a href="https://www.reddit.com/r/mlpccg">r/mlpccg</a>
     <li><a href="https://www.reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
+    <li><a href="https://www.reddit.com/r/mlpgabby">r/mlpgabby</a>
     <li><a href="https://www.reddit.com/r/mlplounge">r/mlplounge</a>
     <li><a href="https://www.reddit.com/r/mlploungesteamgroup">r/mlploungesteamgroup</a>
     <li><a href="https://www.reddit.com/r/mlpoc">r/mlpoc</a>
