--- a/web/index.html
+++ b/web/index.html
@@ -190,6 +190,7 @@
     <li><a href="https://www.reddit.com/r/gallopfrey">r/gallopfrey</a>
     <li><a href="https://www.reddit.com/r/glimmerquisition">r/glimmerquisition</a>
     <li><a href="https://www.reddit.com/r/heyitsshugamotes">r/heyitsshugamotes</a>
+    <li><a href="https://www.reddit.com/r/hoomanmotes">r/hoomanmotes</a>
     <li><a href="https://www.reddit.com/r/hugemotes">r/hugemotes</a>
     <li><a href="https://www.reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="https://www.reddit.com/r/ilovedashie">r/ilovedashie</a>
