--- a/web/index.html
+++ b/web/index.html
@@ -280,6 +280,7 @@
     <li><a href="https://www.reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="https://www.reddit.com/r/sgap">r/sgap</a>
     <li><a href="https://www.reddit.com/r/shymotes">r/shymotes</a>
+    <li><a href="https://www.reddit.com/r/sillynumptie">r/sillynumptie</a>
     <li><a href="https://www.reddit.com/r/sombra">r/sombra</a>
     <li><a href="https://www.reddit.com/r/sonatadusk">r/sonatadusk</a>
     <li><a href="https://www.reddit.com/r/spanishmeerkat">r/spanishmeerkat</a>
