--- a/web/index.html
+++ b/web/index.html
@@ -182,6 +182,7 @@
     <li><a href="https://www.reddit.com/r/flimflambrothers">r/flimflambrothers</a>
     <li><a href="https://www.reddit.com/r/flitter">r/flitter</a>
     <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
+    <li><a href="https://www.reddit.com/r/floofingandsqueaking">r/floofingandsqueaking</a>
     <li><a href="https://www.reddit.com/r/flurryheart">r/flurryheart</a>
     <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
     <li><a href="https://www.reddit.com/r/flutterlounge">r/flutterlounge</a>
