Firefox WebExtension compatibility

--- a/web/index.html
+++ b/web/index.html
@@ -89,9 +89,16 @@
   <p>Opera users may need <a href="https://addons.opera.com/en/extensions/details/download-chrome-extension-9/">this extension</a> first.
   <div class="clear"></div>
 
-  <h3>Firefox &amp; Firefox Mobile</h3>
+  <h3>Firefox 58+ &amp; Firefox Mobile</h3>
   <img src="firefox-logo.png" alt="">
-  <p>Install the addon from <a href="betterponymotes.xpi"><code>betterponymotes.xpi</code></a>.</p>
+  <p>Install the addon from <a href="we/betterponymotes.xpi"><code>we/betterponymotes.xpi</code></a>.</p>
+  <p>Firefox should handle the file automatically. If not, download the file and
+    drag it onto Firefox.</p>
+  <div class="clear"></div>
+
+  <h3>Older Firefox &amp; Derivatives (XUL)</h3>
+  <img src="firefox-logo.png" alt="">
+  <p>Install the addon from <a href="xul/betterponymotes.xpi"><code>xul/betterponymotes.xpi</code></a>.</p>
   <p>Firefox should handle the file automatically. If not, download the file and
     drag it onto Firefox.</p>
   <div class="clear"></div>
