Stylesheet/emote/tag updates 2017-11-14, add r/dinkymotes, r/marshmallow, r/somnambula, and r/twistarlight

--- a/web/index.html
+++ b/web/index.html
@@ -183,6 +183,7 @@
     <li><a href="https://www.reddit.com/r/cuttershy">/r/cuttershy</a>
     <li><a href="https://www.reddit.com/r/daylightemotes">/r/daylightemotes</a>
     <li><a href="https://www.reddit.com/r/desktopponies">/r/desktopponies</a>
+    <li><a href="https://www.reddit.com/r/dinkymotes">/r/dinkymotes</a>
     <li><a href="https://www.reddit.com/r/discord">/r/discord</a>
     <li><a href="https://www.reddit.com/r/equestriagirls">/r/equestriagirls</a>
     <li><a href="https://www.reddit.com/r/falloutequestria">/r/falloutequestria</a>
@@ -209,6 +210,7 @@
     <li><a href="https://www.reddit.com/r/lyra">/r/lyra</a>
     <li><a href="https://www.reddit.com/r/lyraquisition">/r/lyraquisition</a>
     <li><a href="https://www.reddit.com/r/marmemotes">/r/marmemotes</a>
+    <li><a href="https://www.reddit.com/r/marshmallow">/r/marshmallow</a>
     <li><a href="https://www.reddit.com/r/maudpie">/r/maudpie</a>
     <li><a href="https://www.reddit.com/r/minuette">/r/minuette</a>
     <li><a href="https://www.reddit.com/r/mlas1animotes">/r/mlas1animotes</a>
@@ -294,6 +296,7 @@
     <li><a href="https://www.reddit.com/r/shymotes">/r/shymotes</a>
     <li><a href="https://www.reddit.com/r/sillynumptie">/r/sillynumptie</a>
     <li><a href="https://www.reddit.com/r/sombra">/r/sombra</a>
+    <li><a href="https://www.reddit.com/r/somnambula">/r/somnambula</a>
     <li><a href="https://www.reddit.com/r/sonatadusk">/r/sonatadusk</a>
     <li><a href="https://www.reddit.com/r/spanishmeerkat">/r/spanishmeerkat</a>
     <li><a href="https://www.reddit.com/r/speedingturtle">/r/speedingturtle</a>
@@ -320,6 +323,7 @@
     <li><a href="https://www.reddit.com/r/twidashmotes">/r/twidashmotes</a>
     <li><a href="https://www.reddit.com/r/twilightsparkle">/r/twilightsparkle</a>
     <li><a href="https://www.reddit.com/r/twiquisition">/r/twiquisition</a>
+    <li><a href="https://www.reddit.com/r/twistarlight">/r/twistarlight</a>
     <li><a href="https://www.reddit.com/r/vinylscratch">/r/vinylscratch</a>
     <li><a href="https://www.reddit.com/r/zephyrbreeze">/r/zephyrbreeze</a>
     <li><a href="https://www.reddit.com/r/zponymotes">/r/zponymotes</a>
