--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
     will work across the site.</p>
 
   <h3>Features</h3>
-  <p><b>Over 140 subreddits and 10,000 emotes.</b> Never miss another
+  <p><b>Over 180 subreddits and 10,000 emotes.</b> Never miss another
     hidden emote.</p>
 
   <p><b>Powerful built in search.</b> Search by name, subreddit, or even by tag-
@@ -97,7 +97,7 @@
   <div class="clear"></div>
 
   <h3>Older Firefox &amp; Derivatives (XUL)</h3>
-  <img src="firefox-logo.png" alt="">
+  <img src="firefox-logo-legacy.png" alt="">
   <p>Install the addon from <a href="xul/betterponymotes.xpi"><code>xul/betterponymotes.xpi</code></a>.</p>
   <p>Firefox should handle the file automatically. If not, download the file and
     drag it onto Firefox.</p>
@@ -112,10 +112,17 @@
 
   <h3>Android</h3>
   <img src="ponymotes-logo.png" alt="">
+  <img src="slide-logo.png" alt="" style="margin-left: 0px">
   <img src="relay-logo.png" alt="" style="margin-left: 0px">
   <a href="http://dinsfire.com/projects/reddit-emotes/">PonyMotes for Android</a>
   is maintained by <a href="https://www.reddit.com/user/DinsFire64">/u/DinsFire64</a>,
-  and works well in combination with <a href="https://play.google.com/store/apps/details?id=free.reddit.news">Relay for reddit</a>.
+  and works well in combination with <a href="https://play.google.com/store/apps/details?id=me.ccrama.redditslide">Slide</a> and <a href="https://play.google.com/store/apps/details?id=free.reddit.news">Relay for Reddit</a>.
+  <div class="clear"></div>
+
+  <h3>Discord</h3>
+  <img src="discord-logo.png" alt="">
+  <a href="https://github.com/ByzantineFailure/BPM-for-Discord/releases/">BPM for Discord</a>
+  is maintained by <a href="https://www.reddit.com/user/Chalcedon">/u/Chalcedon</a>.
   <div class="clear"></div>
 
   <h3>Other Platforms</h3>
