--- a/web/index.html
+++ b/web/index.html
@@ -207,6 +207,7 @@
     <li><a href="https://www.reddit.com/r/ilovedashie">/r/ilovedashie</a>
     <li><a href="https://www.reddit.com/r/katiemotes">/r/katiemotes</a>
     <li><a href="https://www.reddit.com/r/kingemotes">/r/kingemotes</a>
+    <li><a href="https://www.reddit.com/r/kingemotesii">/r/kingemotesii</a>
     <li><a href="https://www.reddit.com/r/lyra">/r/lyra</a>
     <li><a href="https://www.reddit.com/r/lyraquisition">/r/lyraquisition</a>
     <li><a href="https://www.reddit.com/r/marmemotes">/r/marmemotes</a>
