--- a/web/index.html
+++ b/web/index.html
@@ -313,6 +313,7 @@
     <li><a href="https://www.reddit.com/r/taviquisition">/r/taviquisition</a>
     <li><a href="https://www.reddit.com/r/tbpimagedump">/r/tbpimagedump</a>
     <li><a href="https://www.reddit.com/r/tbpimagedump2">/r/tbpimagedump2</a>
+    <li><a href="https://www.reddit.com/r/tempestshadow">/r/tempestshadow</a>
     <li><a href="https://www.reddit.com/r/thebelletower">/r/thebelletower</a>
     <li><a href="https://www.reddit.com/r/thebestpony">/r/thebestpony</a>
     <li><a href="https://www.reddit.com/r/thecane">/r/thecane</a>
