Add /r/pony_irl and /r/kingemotesiii

--- a/web/index.html
+++ b/web/index.html
@@ -208,6 +208,7 @@
     <li><a href="https://www.reddit.com/r/katiemotes">/r/katiemotes</a>
     <li><a href="https://www.reddit.com/r/kingemotes">/r/kingemotes</a>
     <li><a href="https://www.reddit.com/r/kingemotesii">/r/kingemotesii</a>
+    <li><a href="https://www.reddit.com/r/kingemotesiii">/r/kingemotesiii</a>
     <li><a href="https://www.reddit.com/r/lyra">/r/lyra</a>
     <li><a href="https://www.reddit.com/r/lyraquisition">/r/lyraquisition</a>
     <li><a href="https://www.reddit.com/r/marmemotes">/r/marmemotes</a>
@@ -277,6 +278,7 @@
     <li><a href="https://www.reddit.com/r/ploungeafterdark">/r/ploungeafterdark</a>
     <li><a href="https://www.reddit.com/r/ploungemafia">/r/ploungemafia</a>
     <li><a href="https://www.reddit.com/r/ponk">/r/ponk</a>
+    <li><a href="https://www.reddit.com/r/pony_irl">/r/pony_irl</a>
     <li><a href="https://www.reddit.com/r/ponyanarchism">/r/ponyanarchism</a>
     <li><a href="https://www.reddit.com/r/ponycountdown">/r/ponycountdown</a>
     <li><a href="https://www.reddit.com/r/ponyloungerts">/r/ponyloungerts</a>
