--- a/web/index.html
+++ b/web/index.html
@@ -186,6 +186,7 @@
     <li><a href="https://www.reddit.com/r/dinkymotes">/r/dinkymotes</a>
     <li><a href="https://www.reddit.com/r/discord">/r/discord</a>
     <li><a href="https://www.reddit.com/r/equestriagirls">/r/equestriagirls</a>
+    <li><a href="https://www.reddit.com/r/exiledkingemotes">/r/exiledkingemotes</a>
     <li><a href="https://www.reddit.com/r/falloutequestria">/r/falloutequestria</a>
     <li><a href="https://www.reddit.com/r/flashsentry">/r/flashsentry</a>
     <li><a href="https://www.reddit.com/r/flimflambrothers">/r/flimflambrothers</a>
