--- a/web/index.html
+++ b/web/index.html
@@ -182,6 +182,7 @@
     <li><a href="https://www.reddit.com/r/comicsquisition">/r/comicsquisition</a>
     <li><a href="https://www.reddit.com/r/cuttershy">/r/cuttershy</a>
     <li><a href="https://www.reddit.com/r/daylightemotes">/r/daylightemotes</a>
+    <li><a href="https://www.reddit.com/r/deepfriedmotes">/r/deepfriedmotes</a>
     <li><a href="https://www.reddit.com/r/desktopponies">/r/desktopponies</a>
     <li><a href="https://www.reddit.com/r/dinkymotes">/r/dinkymotes</a>
     <li><a href="https://www.reddit.com/r/discord">/r/discord</a>
